--- a/public/index.html
+++ b/public/index.html
@@ -15,15 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    
     <title>React App</title>
   </head>
   <body>
@@ -38,8 +30,7 @@
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+     
     -->
 <h2>next</h2>
 
@@ -50,14 +41,14 @@
 
         <script type="text/javascript">
                   hi=function(){return "hiyaa.."}
-                document.getElementById("arrow").innerHTML=hi();
+                document.getElementById(" arrow").innerHTML=hi();
 
                 apple=function(){
                   return 'i like apple';
                 }
-                document.getElementById("apple").innerHTML=apple();
-                ball=()=> "i olleyba.."
-                document.getElementById("ball").innerHTML=ball();
+                document.getElementById(" apple").innerHTML=apple();
+                ball=()=> "i play chess.."
+                document.getElementById(" ball").innerHTML=ball();
 
         </script>
 
@@ -66,9 +57,9 @@
 class Car {
   constructor(name) {
     this.brand = name;
-    this.price=" DSA"
+    this.price=" DSA :: "
   }
-  present(){return "I study"+this.price;}
+  present(){return " DSA : "+this.price;}
 }
 
 class Model extends Car {
@@ -77,7 +68,7 @@ class Model extends Car {
     this.model = mod;
   }  
   show() {
-    return this.present() + ', it is important' + this.model
+    return this.present() + ', it is very important' + this.model
   }
 }
 
@@ -100,6 +91,9 @@ document.write(mycar.present());
 <div id="table"></div>
 <div id="jx"></div>
 <div id="tt"></div>
+
+<div id="plays"></div>
+
 
 
 
